feat(web): enhance subname claiming UX
Improve UI for claiming `lilnouns.eth` subnames by adding better input validation, preview, success actions, and explanatory content. Simplifies the process for users while ensuring clarity.

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Lora:wght@400;500;600;700&family=Fira+Code:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS + shadcn/ui</title>
+    <title>Claim a subname under lilnouns.eth</title>
+    <meta name="description" content="Own a Lil Noun? Claim your subname under lilnouns.eth. Simple, transparent, and on-chain. Free + gas." />
   </head>
   <body class="min-h-screen bg-background text-foreground antialiased">
     <div id="root"></div>
