style(web): reformat HTML for improved readability
Refactor HTML formatting to improve consistency and readability. This enhances maintainability without affecting functionality.

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -2,8 +2,10 @@
 <html lang="en" class="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,9 +13,12 @@
       rel="stylesheet"
     />
     <title>Claim a subname under lilnouns.eth</title>
-    <meta name="description" content="Own a Lil Noun? Claim your subname under lilnouns.eth. Simple, transparent, and on-chain. Free + gas." />
+    <meta
+      name="description"
+      content="Own a Lil Noun? Claim your subname under lilnouns.eth. Simple, transparent, and on-chain. Free + gas."
+    />
   </head>
-  <body class="min-h-screen bg-background text-foreground antialiased">
+  <body class="bg-background text-foreground min-h-screen antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
