feat(web): make page title configurable via environment
Support dynamic page titles using `%VITE_SITE_TITLE%`. This improves flexibility and customization for different deployments.

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -40,7 +40,7 @@
       rel="stylesheet"
     />
 
-    <title>Claim a subname under lilnouns.eth</title>
+    <title>%VITE_SITE_TITLE%</title>
     <meta name="description" content="%VITE_SITE_DESCRIPTION%" />
   </head>
   <body class="bg-background text-foreground min-h-screen antialiased">
