feat(web): add `name` attribute to `action` object
Introduce a `name` attribute to enhance configuration flexibility. This improves customization and better supports dynamic use cases.

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -24,6 +24,7 @@
           "title":"%VITE_FC_BUTTON%",
           "action":{
             "type":"launch_miniapp",
+            "name":"%VITE_SITE_TITLE%",
             "url":"%VITE_FC_LAUNCH_URL%",
             "splashImageUrl":"%VITE_FC_SPLASH_ICON%",
             "splashBackgroundColor":"%VITE_FC_SPLASH_BG%"
